--- a/Views/Appointment/CourseDetials.html
+++ b/Views/Appointment/CourseDetials.html
@@ -1,10 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no"/>
+    <meta name="format-detection" content="telephone=no"/>
+    <meta name="format-detection" content="email=no"/>
+    <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.css">
     <title>课程详情</title>
+    <style>
+        .CourseDetials_leftImg {
+            border: 0px;
+            padding: 0px;
+            width: 80px;
+            height: 80px;
+        }
+        .pure {
+            padding: 0px;
+            border: 0px;
+            margin: 0px;
+        }
+        .divide {
+            width: 100%;
+            height: 8px;
+            background-color: #E5E5E5;
+        }
+        .registrationButton {
+            margin-top: 10px;
+            width: 100%;
+            font-size: 16px;
+            height: 40px;
+            border:0;
+            border-radius: 3px;
+            background: #F24D4D;
+            color: #fff;
+            outline: none;
+        }
+    </style>
 </head>
 <body>
+<div>
+    <div id="Detials">
 
+    </div>
+    <div style="overflow: auto" id="Teachers">
+
+    </div>
+    <div id="Serve">
+
+    </div>
+</div>
+<script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Appointment/CourseDetials.js"></script>
 </body>
 </html>
