--- a/Views/Appointment/CourseList.html
+++ b/Views/Appointment/CourseList.html
@@ -9,45 +9,56 @@
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.css">
     <style>
+
         .typeButton {
-            height: 40px;
-            font-size: 15px;
-            background-color: #ffffff;
-            margin: 0px;
-            border: 0px;
-            padding: 0px;
-            outline: none;
-        }
+             height: 40px;
+             font-size: 15px;
+             background-color: #ffffff;
+             margin: 0px;
+             border: 0px;
+             padding: 0px;
+             outline: none;
+             border-bottom: 1px solid #ffffff;
+         }
+
         .active {
             border-bottom: 1px solid #ff0000;
         }
-        .courseLine_leftImg {
-            width: 80px;
-            height: 80px;
-            padding-right: 0px;
+
+        .courseTitle {
+            background: transparent;
+            outline: none;
+            border: none;
+            width: 68%;
+            margin: 0px;
+            padding: 0px;
+            overflow: hidden;
         }
 
-        li {
-            width: 100%;
-            clear: both;
+        .courseLine_leftImg {
+            float: left;
+            width: 75px;
+            height: 75px;
+            background-size: cover;
         }
 
         .registrationButton {
-            width: 74px;
-            height: 27px;
+            width: 30%;
+            font-size: 12px;
+            height: 30px;
+            border:0;
+            border-radius: 3px;
             background: #F24D4D;
-            border-radius: 2px;
-            border: 0px;
-            font-size: 14px;
-            color: #ffffff;
-        }
-        div.test {
-            white-space:nowrap;
-            width:100%;
-            overflow:hidden;
-            border:0px solid #ffffff;
+            color: #fff;
+            outline: none;
         }
 
+        .info {
+            overflow: hidden;
+            height: 18px;
+            font-size: 12px;
+            color: #9B9B9B;
+        }
     </style>
 </head>
 <body>
@@ -57,57 +68,21 @@
 <div class="container">
     <div class="row" style="border-bottom: 1px solid #dddddd">
         <button class="col-xs-4 typeButton">课程类型</button>
-        <button class="col-xs-4 typeButton active" id="studentButton">学生课程</button>
+        <button class="col-xs-4 typeButton" id="studentButton">学生课程</button>
         <button class="col-xs-4 typeButton" id="parentsButton">家长课程</button>
     </div>
 </div>
-<div class="container" id="StudentList">
-    <div class="row">
-        <div class="col-xs-12">
-            <ul class="media-list" id="StudentCourseList">
-                <li class="media" style="padding-top: 13px;padding-bottom: 13px;">
-                    <div class="media-left media-middle courseLine_leftImg">
-                        <img class="img-responsive" style="width: 100%" src="../../Images/banner/banner01.png">
-                    </div>
-                    <div class="media-body" style="width: 80%; padding-left: 8px; padding-top: 7px;">
-                        <ul class="list-unstyled">
-                            <li>
-                                <span style="font-size: 14px;" class="media-heading">Media heading</span>
-                                <button class="pull-right registrationButton">立即预约</button>
-                            </li>
-                            <li style="padding-bottom: 7px;">
-                                <div class="test" style="width: 99%; font-size: 12px; text-overflow: ellipsis; padding-right: 10px">
-                                    哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈哈
-                                </div>
-                            </li>
-                            <li>
-                                <div class="text-left pull-left" style="width: 50%; font-size: 10px;">已报名额</div>
-                                <div class="text-right pull-left" style="width: 50%; font-size: 10px">100/300</div>
-                            </li>
-                            <li>
-                                <div class="progress" style="height: 3px;">
-                                    <div class="progress-bar-info" role="progressbar" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100" style="width: 60%;height: 3px;">
-                                        <span class="sr-only">60% Complete</span>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </li>
+<div id="StudentList" class="container">
 
-            </ul>
-        </div>
-    </div>
 </div>
-<div class="container" id="ParentsList">
-    <div class="row">
-        <div class="col-xs-12">
+<div id="ParentsList" class="container">
 
-        </div>
-    </div>
 </div>
 <script src="../../Framework/Jqueryv2.4/jquery.min.js"></script>
 <script src="../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
 <script src="../../Framework/jquery-cookies/jquery.cookie.js"></script>
+<script src="../../Framework/layer_mobile/layer.js"></script>
+<script src="../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../Scripts/Appointment/CourseList.js"></script>
 </body>
 </html>
