--- a/Views/Admin/User/UserList.html
+++ b/Views/Admin/User/UserList.html
@@ -11,6 +11,7 @@
             width: 70px;
             height: 30px
         }
+
         select {
             height: 40px;
             border: 1px solid #dddddd;
@@ -20,24 +21,25 @@
             padding-right: 5px;
             outline: none;
         }
+
         .header {
             background: #efefef;
             font-size: 15px;
         }
-        </style>
+    </style>
 
 
 </head>
 <body>
-    <div id="header"></div>
-    <div style="height: 80px"></div>
-    <div class="container">
+<div id="header"></div>
+<div style="height: 80px"></div>
+<div class="container">
     <div class="row" style="padding: 10px;background: #e5e5e5">
         <div class="col-xs-6 text-left">
             <h4><strong>学员管理</strong></h4>
         </div>
         <div class="col-xs-6 text-right">
-            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字" />
+            <input type="text" style="width: 60%" id="SearchKey" placeholder="请输入搜索关键字"/>
             <button id="btnSearch">搜 索</button>
         </div>
     </div>
@@ -48,12 +50,18 @@
             </ul>
         </div>
     </div>
+    <div class="row">
+        <div class="col-xs-12 text-center">
+            <div id="Page"></div>
+        </div>
     </div>
-    <script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
-    <script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
-    <script src="../../../Scripts/Commen/CourseCommen.js"></script>
-    <script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
-    <script src="../../../Scripts/Admin/UserList.js"></script>
+</div>
+<script src="../../../Framework/Jqueryv2.4/jquery.min.js"></script>
+<script src="../../../Framework/Bootstrap3.3.0/js/bootstrap.min.js"></script>
+<script src="../../../Scripts/Commen/CourseCommen.js"></script>
+<script src="../../../Framework/layer-v2.4/layer/layer.js"></script>
+<script src="../../../Framework/laypage-v1.3/laypage/laypage.js"></script>
+<script src="../../../Scripts/Admin/UserList.js"></script>
 
 </body>
 </html>
