--- a/Views/Admin/Order/PhaseOrder.html
+++ b/Views/Admin/Order/PhaseOrder.html
@@ -90,6 +90,7 @@
         <div class="row">
             <div class="col-xs-12">
                 <select style="width: 100%;height: 40px;">
+                    <option value="2">排进候补名额</option>
                     <option value="3">预约成功</option>
                     <option value="4">已参加</option>
                     <option value="5">已退费</option>
