--- a/Views/Admin/Phase/PhaseEdit.html
+++ b/Views/Admin/Phase/PhaseEdit.html
@@ -80,6 +80,7 @@
         <div class="col-xs-2">阶段选择：</div>
         <div class="col-xs-6">
             <select id="PhaseType">
+                <option value="0">0</option>
                 <option value="1">1</option>
                 <option value="2">2</option>
                 <option value="3">3</option>
