--- a/Css/PersonalCenter/MyQRCode.css
+++ b/Css/PersonalCenter/MyQRCode.css
@@ -1,7 +1,9 @@
 .qrcode {
-    padding: 30px;
-    border: 1px solid #4A90E2;
-    border-radius: 5px;
+    position: absolute;
+    top: 25%;
+    padding: 70px;
+    /*border: 1px solid #4A90E2;*/
+    /*border-radius: 5px;*/
 }
 
 .qrcode img {
@@ -11,6 +13,23 @@
 
 .qrcode canvas {
     width: 100%;
+}
+
+.headerImg {
+    position: absolute;
+    top: 15px;
+    left: 15px;
+    width: 50px;
+    height: 50px;
+}
+
+.nickName {
+    position: absolute;
+    top: 30px;
+    left: 70px;
+    width: 70%;
+    color: white;
+    height: 20px;
 }
 
 .pd40 {
