--- a/Views/PersonalCenter/MyQRCode.html
+++ b/Views/PersonalCenter/MyQRCode.html
@@ -7,53 +7,9 @@
     <meta name="format-detection" content="email=no"/>
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Framework/Bootstrap3.3.0/css/bootstrap-theme.min.css">
-    <!--<link rel="stylesheet" href="../../Css/PersonalCenter/MyQRCode.css">-->
+    <link rel="stylesheet" href="../../Css/PersonalCenter/MyQRCode.css">
     <meta charset="UTF-8">
     <title>我的二维码</title>
-    <style>
-        .qrcode {
-            position: absolute;
-            top: 25%;
-            padding: 60px;
-            /*border: 1px solid #4A90E2;*/
-            /*border-radius: 5px;*/
-        }
-
-        .qrcode img {
-            display: inline-block !important;
-            width: 100%;
-        }
-
-        .qrcode canvas {
-            width: 100%;
-        }
-
-        .headerImg {
-            position: absolute;
-            top: 15px;
-            left: 15px;
-            width: 50px;
-            height: 50px;
-        }
-
-        .nickName {
-            position: absolute;
-            top: 30px;
-            left: 70px;
-            width: 70%;
-            color: white;
-            height: 20px;
-        }
-
-        .pd40 {
-            padding: 0px 40px;
-        }
-
-        .container {
-            margin-top: 20%
-        }
-        .imgLogo{display: none;}
-    </style>
 </head>
 <body>
     <div id="MyQRCode">
